# Plonky3

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  repo-sync.yml
accumulation/: Cargo.toml
accumulation/src/: accumulation.rs  lib.rs
air/src/: air.rs
baby-bear/: Cargo.toml
baby-bear/src/: dft.rs
bn254-fr/src/: poseidon2.rs
circle/src/: pcs.rs
commit/: Cargo.toml
commit/src/: accumulation.rs  lib.rs  mmcs.rs
commit/src/adapters/: extension_mmcs.rs
dft/benches/: fft.rs
fri/src/: prover.rs  two_adic_pcs.rs
goldilocks/src/: poseidon2.rs
matrix/src/: lib.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: merkle_tree.rs  mmcs.rs
poseidon2/src/: diffusion.rs  lib.rs  matrix.rs
stir/: Cargo.toml
stir/src/: common.rs  hash.rs  lib.rs  prover.rs  stir_abstractions.rs  utils.rs  verifier.rs
symmetric/src/: lib.rs
uni-stark/src/: prover.rs
