[package]
name = "p3-stir"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ark-std = "0.4"
ark-ff = { version = "0.4", features = ["asm"] }
ark-serialize = "0.4"
ark-crypto-primitives = { git = "https://github.com/storojs72/crypto-primitives", features = ["merkle_tree"]}
ark-poly = "0.4"
rand = "0.8"
rayon = { version = "1.8", optional = true }
derivative = { version = "2", features = [ "use_core" ] }
blake3 = "1.5.0"
sha3 = "0.10"
lazy_static = "1.4"
